# brotli

./: .gitignore  README  meson.build
.github/workflows/: build_test.yml
c/: meson.build
c/common/: meson.build  platform.h
c/dec/: meson.build
c/enc/: meson.build
c/include/: meson.build  monolithic_examples.h
c/include/brotli/: meson.build
c/tools/: brotli.c
java/org/brotli/: pom.xml
java/org/brotli/dec/: State.java  pom.xml
research/: brotli_decoder.c  deorummolae.cc  dictionary_generator.cc  draw_diff.cc  draw_histogram.cc  durchschlag.cc  find_opt_references.cc
